--- a/mesatrabajo.csproj
+++ b/mesatrabajo.csproj
@@ -34,8 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EstandarXs">
-      <HintPath>..\..\estandarxs\estandarxs\bin\Debug\EstandarXs.dll</HintPath>
+    <Reference Include="EstandarXs, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\EstandarXs\estandarxs\bin\Debug\EstandarXs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
